<resources>
    <string name="app_name">FintechChatProject</string>
    <string name="avatar">avatar</string>
    <string name="input_message_hint">Написать…</string>
    <string name="channels_section">Channels</string>
    <string name="people_section">People</string>
    <string name="profile_section">Profile</string>
    <string name="search_content_description">focus_to_search</string>
    <string name="search_input_hint">Search…</string>
    <string name="users_input_hint">Search…</string>
    <string name="dropdown_description">expand_stream</string>
    <string name="profile_image">profile_image</string>
    <string name="user_status">user_status</string>
    <string name="something_went_wrong">Something went wrong,\n we can\'t find this user</string>
    <string name="try_again">Повторить</string>
    <string name="try_again_longer">Попробуй еще раз</string>
    <string name="no_stream">We couldn\'t find \n any stream</string>
    <string name="no_people">you have no one.</string>
    <string name="emoji_loading">Загружаем смайлы</string>
    <string name="finding_bugs">Ищем жуков</string>
    <string name="discover_you">Узнаем кто вы</string>
    <string name="just_one_more_step">Просто еще один шаг</string>
    <string name="internet_on">Включаем интернеты</string>
    <string name="loading_is_over">loadingIsOver</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="no_connection">Работает без интернета</string>
    <string name="not_so_fast">Уоу, уоу, не так быстро, ковбой. Это 429</string>
    <string name="timeout_connection">Нестабильное соединение, ничего не получилось</string>
    <string name="default_error">Error</string>
    <string name="unexpected_room_exception">Произошло что-то страшное с базой данных</string>
    <string name="reload">Перезагрузить</string>
    <string name="undefined_error_message">Неизвестная ошибка, перезагрузите страницу</string>
    <string name="no_connectivity_db_empty_message">Нет сети.\n\nА еще мы не смогли найти какие-либо сохраненные данные, поэтому вместо этого здесь сейчас пустой экран с длинным текстом</string>
    <string name="file_attaching_toast">Attaching files isn\'t ready yet</string>
    <string name="retry_button">retry_load_chat_button</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="topic_format">Topic: %s</string>
    <string name="cache_empty">Нет сохранненых сообщений</string>
    <string name="topic_chooser_or">ИЛИ</string>
    <string name="topic_chooser_new">НОВЫЙ ТОПИК</string>
    <string name="topic_new_hint">Название топика</string>
    <string name="topic_chooser_title">Выбор топика</string>
</resources>