<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/channels"
        android:enabled="true"
        android:icon="@drawable/ic_channels"
        android:title="@string/channels_section"
        app:iconTint="@color/menu_icon_color_selector"/>
    <item
        android:id="@+id/people"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/people_section"
        app:iconTint="@color/menu_icon_color_selector"
        />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_section"
        app:iconTint="@color/menu_icon_color_selector"
        />
</menu>