<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_matte"
    android:transitionName="topic_chooser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="32dp"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="dialog_success, title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/topic_chooser_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/start_guide"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_success"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon.Circle"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:paddingTop="14dp"
            app:backgroundTint="#90C583"
            android:elevation="4dp"
            android:outlineProvider="background"
            app:cornerRadius="22dp"
            app:icon="@drawable/ic_checkmark"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="@id/end_guide"
            app:layout_constraintTop_toTopOf="@id/title" />

        <TextView
            android:id="@+id/create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.23"
            android:text="@string/topic_chooser_new"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_section_barrier" />

        <EditText
            android:id="@+id/create_topic"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/topic_choose_input_box_shape"
            android:hint="@string/topic_new_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="20"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="#CDCDCD"
            app:layout_constraintLeft_toLeftOf="@id/start_guide"
            app:layout_constraintRight_toRightOf="@id/end_guide"
            app:layout_constraintTop_toBottomOf="@id/create_text" />

        <TextView
            android:id="@+id/choose_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.23"
            android:text="@string/topic_chooser_or"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_topic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:nestedScrollingEnabled="false"
            android:paddingHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_text"
            tools:itemCount="12"
            tools:listitem="@layout/topic_chooser_instance" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>